--- a/package.json
+++ b/package.json
@@ -13,7 +13,18 @@
   "license": "MIT",
   "dependencies": {
     "check-types": "^7.0.0",
+    "hapi": "^14.2.0",
     "moment": "^2.14.1",
-    "node-fetch": "^1.5.3"
+    "mongodb": "^2.2.7",
+    "node-cron": "^1.1.1",
+    "node-fetch": "^1.5.3",
+    "when": "^3.7.7"
+  },
+  "devDependencies": {
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.2"
   }
 }
