--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "check-types": "^7.0.0",
+    "express": "^4.15.2",
     "moment": "^2.14.1",
+    "mongo-db": "^1.0.2",
     "node-fetch": "^1.5.3"
   }
 }
